Bug 78546 - [swrast] piglit copyteximage-border regression
Summary: [swrast] piglit copyteximage-border regression
Status: RESOLVED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Other (show other bugs)
Version: git
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Kenneth Graunke
QA Contact:
URL:
Whiteboard:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2014-05-10 22:06 UTC by Vinson Lee
Modified: 2014-05-20 04:58 UTC (History)
3 users (show)

See Also:
i915 platform:
i915 features:


Attachments

Description Vinson Lee 2014-05-10 22:06:26 UTC
mesa: d9e102b220701c15730329290daa0176751af09a (master 10.3.0-devel)

$ ./bin/copyteximage-border -auto
Probe color at (114,10)
  Expected: 1.000000 0.000000 0.000000 0.000000
  Observed: 0.000000 1.000000 0.000000 0.000000
Probe color at (145,10)
  Expected: 0.000000 1.000000 0.000000 0.000000
  Observed: 0.501961 0.501961 0.501961 0.501961
Probe color at (114,42)
  Expected: 0.000000 0.000000 1.000000 0.000000
  Observed: 1.000000 1.000000 1.000000 0.000000
Probe color at (145,42)
  Expected: 1.000000 1.000000 1.000000 0.000000
  Observed: 0.501961 0.501961 0.501961 0.501961
PIGLIT: {'result': 'fail' }

234db609544ee521458ce8b648e70cffe2fda6f9 is the first bad commit
commit 234db609544ee521458ce8b648e70cffe2fda6f9
Author: Eric Anholt <eric@anholt.net>
Date:   Fri Feb 28 13:23:25 2014 -0800

    meta: Add an accelerated glCopyTexSubImage using glBlitFramebuffer.
    
    You'll note from the previous commits that there's something of a loop
    here: You call CTSI, which calls BlitFB, then if things go wrong that
    falls back to CTSI.  As a result, meta CTSI reaches over into blitfb to
    tell it "no, don't try that fallback".
    
    v2: Drop the _mesa_update_state(), which was only necessary due to use of
        _mesa_clip_blit() in _mesa_meta_BlitFramebuffer() in another patch
        series.
    v3: Drop an _EXT suffix I copy-and-pasted.
    
    Reviewed-by: Ian Romanick <ian.d.romanick@intel.com> (v2)
    Reviewed-by: Kenneth Graunke <kenneth@whitecape.org>

:040000 040000 63fc3120cdedde84fc916e8ba114c2c8b5014981 3d7559710cde2597f29421dcd0a45c6423c7795b M	src
bisect run success
Comment 2 Kenneth Graunke 2014-05-20 04:58:18 UTC
These are now in master as:

commit 2ecc7268bacf5d240ddd4d341360bfb31f4dd04f                                  
Author: Kenneth Graunke <kenneth@whitecape.org>                                  
Date:   Sun May 18 22:26:59 2014 -0700                                           
                                                                                 
    meta: Avoid _swrast_BlitFramebuffer in the meta CopyTexSubImage code.

and the preceding 3 commits.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.